[package]
name = "rustylms"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A library used to communicate with lm-studio servers"
repository = "https://github.com/BaxoPlenty/rustylms"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
